[metadata]
# replace with your username:
name = pedalo-server
version = 0.0.1
author = Vladimir Garanin
author_email = vladimir.garanin@stfc.ac.uk
description = Test package build
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stfc-aeg/pedalo-server
project_urls =
    Bug Tracker = https://github.com/stfc-aeg/pedalo-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    tornado
    bme280
    smbus
    bme680
    w1thermsensor
    enviroplus
    ltr559

[options.packages.find]
where = src